# uefi_structs

./: README.md  dump_boot.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
uefi_structs/: boot_manager.py  device_path.py  utils.py  variables.py
uefi_structs/stores/: efivarfs.py
